Fix items align in advert section.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -306,7 +306,7 @@ header.mainHeader {
   padding-bottom: 90px;
   .container{
     display: flex;
-    align-items: center;
+    align-items: baseline;
     justify-content: space-between;
     flex-wrap: wrap;
     text-align: center;
